fixed username display in navbar and fixed post alignment

--- a/stylesheets/comments.css
+++ b/stylesheets/comments.css
@@ -23,7 +23,6 @@ a:link, .community-text:link {
 
 .container {
     position: relative;
-    text-align: center;
     padding-left: 0px;
     padding-right: 0px;
 }
